# email-health-scanner

./: .gitignore  README.md
backend/: Cargo.toml  Dockerfile  fly.toml
backend/src/: main.rs
frontend/: index.html
