[package]
name = "email-health-scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "email-health-scanner"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
